--- a/Sharks-Data-Cleaning.ipynb
+++ b/Sharks-Data-Cleaning.ipynb
@@ -1861,7 +1861,7 @@
    "outputs": [],
    "source": [
     "#Guardo el nuevo dataset con los datos limpios para su próximo analisis.\n",
-    "output.to_csv('Output/sharkattack_output.csv')"
+    "data.to_csv('Output/sharkattack_output.csv')"
    ]
   },
   {
